<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 Eugen Rădulescu <synapticwebb@gmail.com>
  ~ This file is part of the CipherPass project ( https://github.com/synapticweb/CipherPass ).
  ~ See the LICENSE file in the project root for license terms.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/close"
        android:icon="@drawable/close"
        android:title="@string/addedit_close"
        app:showAsAction="always" />
</menu>